--- a/style.css
+++ b/style.css
@@ -4,3 +4,31 @@ body {
     padding: 0;
     overflow: hidden;
 }
+
+.fps {
+    font-family: monospace;
+
+    position: absolute;
+    z-index: 3;
+
+    width: 200px;
+    height: 64px;
+
+    text-align: center;
+    padding: 10px 10px;
+
+    box-sizing: border-box;
+
+    font-size: 36px;
+
+    background-color: #0003;
+    color: white;
+
+    backdrop-filter: blur(60px);
+}
+
+canvas {
+    width: 100%;
+
+    image-rendering: pixelated;
+}
